Implemented Chart.js and drew and empty chart

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">	
     <title>Pig Dice Game</title>
     <link rel="stylesheet" href="dice.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.3.2/dist/chart.min.js"></script>
     <script src="js/dice.js"></script>
 </head>
 <body>
@@ -41,6 +42,11 @@
 
             <div id="winner-output"></div>
         </section>
+
+        <div id="chart">
+            <canvas id="score-chart" width="400" height="400"></canvas>
+        </div>
+        <script src="js/chart.js"></script>
     </main>
 </body>
 </html>
