--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
 
         <div id="chart">
-            <canvas id="score-chart"></canvas>
+            <canvas id="score-chart" width="400" height="400"></canvas>
         </div>
     </main>
 </body>
